# tree-sitter-jinja2

./: CMakeLists.txt  Cargo.toml  grammar.js  package.json  pyproject.toml  tree-sitter-jinja2.wasm  tree-sitter.json
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
