[package]
name = "tree-sitter-jinja2"
description = "Tree-sitter grammar for Jinja2 templates"
version = "0.0.9"
authors = ["Stephan Seitz"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "jinja2"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "git://github.com/thehamsta/tree-sitter-jinja2.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
